third_party/move/tools/move-unit-test/tests/fail_fast/unittest-fast.exp
Running Move unit tests
[ FAIL    ] 0x1::UnitTest::test_ba
0x1::UnitTest::test_ba
Output: Ok(Changes { accounts: {} })

Test failures:

Failures in 0x1::UnitTest:

┌── test_ba ──────
│ error[E11001]: test failure
│    ┌─ unittest-fast.move:19:9
│    │
│ 17 │     fun test_ba() {
│    │         ------- In this function in 0x1::UnitTest
│ 18 │         let ret = bar(17);
│ 19 │         assert!(ret == 19, ONE);
│    │         ^^^^^^ Test was not expected to error, but it aborted with code 131073 (category: OUT_OF_RANGE, reason: 1) originating in the module 0000000000000000000000000000000000000000000000000000000000000001::UnitTest rooted here
│ 
│ 
└──────────────────

Test result: FAILED. Total tests: 1; passed: 0; failed: 1
